plugin/src/test/resources/annotator/perl/unreachableCode/callDieLast.code
<error descr="Unreachable code">foo</error> "First", die "something";